# jsonshell

./: README.md  document.json  jsonsh.py  pyproject.toml
src/: jsonsh.py  jsonsh_utils.py
src/jsonshell.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
