[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "json.sh"
version = "1.0.0"
description = "JSONShell, the easy way to navigate JSON objects in a shell-like environment"
readme = "README.md"
authors = [{ name = "Carl Furtado", email = "carlzfurtado@gmail.com" }]
license = { file = "LICENSE" }
classifiers = []
keywords = []
dependencies = [
    "anytree >= 2.8.0",
    "dill => 0.3.6"
]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/User0332/jsonshell"

[project.scripts]
jsonsh = "jsonsh"
"json.sh" = "jsonsh"